Updated default code base

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         }
 
         button.withImage {
-            width: 60px;
-            height: 60px;
+            width: 100px;
+            height: 100px;
             margin-right: 40%;
             /* ask about why image is not moving on margin */
             background-image: url(./images/hay.jpg);
@@ -30,9 +30,13 @@
             background-repeat: no-repeat;
             background-position: center;
             border: none;
-            
-
         }
+        img.test {
+            height: 100px;
+            width: 100px;
+        }
+
+
 
         button {
             width: 50px;
@@ -51,12 +55,11 @@
         <p class="link"> Click here for more </p>
     </a>
 
-    <a href="SecondPage.html">
+    <a href="ThirdPage.html">
         <button class = "withImage">
         </button>
     </a>
-
-
+    <img class = "test" src="images/hay.jpg"> <img>
 
 </body>
 
