commit to work on computer instead
Worked with headers and how to create id's for headers and click a href to scroll automatically to a certain part of the page

--- a/SecondPage.html
+++ b/SecondPage.html
@@ -5,16 +5,37 @@
             Second Page
         </title>
         <style>
-            p {
-                font-weight: bold;
-                color: aqua;
-            }
+        a.chizuruLink{
+            float: left;
+            color: teal;
+            font-weight: 700;
+            margin-top: 150px;
+            font-weight: bold;
+            font-size: 15px;
+
+        }
+        img.chizuru{
+            border-radius: 150px;
+            float: left;
+            margin-right: 40px;
+            width: 250px;
+            height: 250px;
+        }
+        button {
+            height: 50px;
+            width: 50px;
+        }
         </style>
     </head>
 
     <body>
-        <p>
-            Hello
-        </p>
+        <img class = "chizuru" src = "images\chizuru.jpg" alt="Sorry this images could not be loaded"> 
+        <a class = "chizuruLink" href="https://tinyurl.com/42b3bxe8"> Click here for more Chizuru pictures </a>
+
     </body>
+
+    <a href="/index.html">
+        <button> </button>
+    </a>
+    
 </html>
